--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ledger-live"]
 	path = ledger-live
-	url = git@github.com:LedgerHQ/ledger-live.git
+	url = git@github.com:Gwen-M/ledger-live.git
